Updated ENV Example

--- a/.env.example
+++ b/.env.example
@@ -42,7 +42,7 @@ APP_KEY=
 APP_DEBUG=true
 APP_SERVER_NAME=localhost
 APP_SERVER_PORT=${WEB_PORT}
-APP_URL="http://${APP_SERVER_NAME}"
+APP_URL="http://${APP_SERVER_NAME}:${APP_SERVER_PORT}"
 APP_PUBLIC_PATH=/public
 APP_TIMEZONE=UTC
 
