--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,14 @@
     ],
     "require": {
         "php": "^7.1.3",
+        "box/spout": "^2.7",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
-        "spatie/laravel-backup": "^5.10",
         "smartins/passport-multiauth": "^2.0",
+        "spatie/laravel-backup": "^5.10",
         "spatie/laravel-permission": "^2.15"
     },
     "require-dev": {
