--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "box/spout": "^2.7",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3.0",
+        "jtant/laravel-env-sync": "1.4.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
