--- a/.env.example
+++ b/.env.example
@@ -1,39 +1,3 @@
-#############################################################
-# ENV Settings here are mixed with Docker-Compose & Laravel
-#############################################################
-
-# Necessary for Windows
-COMPOSE_CONVERT_WINDOWS_PATHS=1
-
-# Select which docker-compose files to include. Append more with `:docker-compose.prod.yml` at the end
-COMPOSE_FILE=docker-compose.yml
-
-# Change the separator from : to ; on Windows
-COMPOSE_PATH_SEPARATOR=:
-
-# Define the prefix of container names.
-COMPOSE_PROJECT_NAME=laraapp
-
-# Web Access Port
-WEB_PORT=80
-
-# Adminer SQL Access Port
-ADMINER_PORT=8080
-
-# Echo Server Access Port
-ECHO_SERVER_PORT=6001
-
-# All volumes driver
-VOLUMES_DRIVER=local
-
-# All Networks driver
-NETWORKS_DRIVER=bridge
-
-# Enter your Docker Host IP (will be appended to /etc/hosts). Default is `10.0.75.1`
-DOCKER_HOST_IP=10.0.75.1
-
-#############################################################
-
 DEBUGBAR_ENABLED=null
 
 APP_NAME=Laravel
@@ -41,8 +5,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_SERVER_NAME=localhost
-APP_SERVER_PORT=${WEB_PORT}
-APP_URL="http://${APP_SERVER_NAME}:${APP_SERVER_PORT}"
+APP_SERVER_PORT=443
+APP_URL="https://${APP_SERVER_NAME}:${APP_SERVER_PORT}"
 APP_PUBLIC_PATH=/public
 APP_TIMEZONE=UTC
 
@@ -54,8 +18,6 @@ DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
-DB_ROOT_PASSWORD=supersecret
-DB_DATA_VOLUME=mysql
 DB_TIMEZONE=+00:00
 DB_USE_DEFAULT_STRING_LENGTH=false
 
