--- a/docker/web-app/supervisor/supervisord.conf
+++ b/docker/web-app/supervisor/supervisord.conf
@@ -139,4 +139,4 @@ serverurl=unix:///var/run/supervisor.sock ; use a unix:// URL  for a unix socket
 ; include files themselves.
 
 [include]
-files = /etc/supervisord.d/*.conf
+files = /etc/supervisor/conf.d/*.conf
