--- a/docker/db/my.cnf
+++ b/docker/db/my.cnf
@@ -4,14 +4,14 @@
 # http://dev.mysql.com/doc/mysql/en/server-system-variables.html
 
 [client]
-default-character-set = utf8mb4
+default_character_set = utf8mb4
 
 [mysql]
-default-character-set = utf8mb4
+default_character_set = utf8mb4
 
 [mysqld]
-default-authentication-plugin=mysql_native_password
-sql-mode="STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION"
-character-set-client-handshake=FALSE
-character-set-server=utf8mb4
-collation-server=utf8mb4_unicode_ci
+default_authentication_plugin=mysql_native_password
+sql_mode="STRICT_TRANS_TABLES,NO_ENGINE_SUBSTITUTION"
+character_set_client_handshake=FALSE
+character_set_server=utf8mb4
+collation_server=utf8mb4_unicode_ci
