Upgraded to Laravel 5.8

--- a/.env.example
+++ b/.env.example
@@ -46,6 +46,11 @@ MAIL_ENCRYPTION=null
 FIREBASE_API_ACCESS_KEY=
 FIREBASE_SSL_VERIFY=false
 
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=us-east-1
+AWS_BUCKET=
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
