--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
         "box/spout": "^2.7",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3.0",
-        "jtant/laravel-env-sync": "1.4.0",
-        "laravel/framework": "5.7.*",
+        "jtant/laravel-env-sync": "^2.0.0",
+        "laravel/framework": "^5.8.0",
         "laravel/tinker": "^1.0",
         "predis/predis": "^1.1",
-        "smartins/passport-multiauth": "^2.0",
-        "spatie/laravel-backup": "^5.10",
+        "smartins/passport-multiauth": "^4.1",
+        "spatie/laravel-backup": "^6.3",
         "spatie/laravel-permission": "^2.15"
     },
     "require-dev": {
@@ -31,8 +31,8 @@
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^2.0",
-        "phpunit/phpunit": "^7.0"
+        "nunomaduro/collision": "^3.0",
+        "phpunit/phpunit": "^8.0"
     },
     "autoload": {
         "classmap": [
@@ -59,7 +59,7 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate"
+            "@php artisan key:generate --ansi"
         ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
