--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "flatpickr": "^4.5.2",
-        "laravel-echo": "^1.4.0",
-        "laravel-mix": "^2.0",
+        "laravel-echo": "^1.5.4",
+        "laravel-mix": "^4.0.7",
         "lodash": "^4.17.13",
         "popper.js": "^1.12",
+        "resolve-url-loader": "^2.3.1",
+        "sass": "^1.15.2",
+        "sass-loader": "^7.1.0",
         "select2": "^4.0.5",
         "select2-bootstrap4-theme": "^1.0.0",
         "socket.io-client": "^2.1.1",
