Docker scripts update

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -22,7 +22,7 @@ DOCKER_BUILD_MODE=prod
 DOCKER_BUILD_CONTEXT_DIR=../
 
 # Docker Volume Root Dir
-DOCKER_VOLUME_ROOT_DIR=../
+DOCKER_VOLUME_ROOT_DIR=../codes/
 
 # Timezone
 TIMEZONE=UTC
