--- a/docker/docker-compose.override.dev.yml
+++ b/docker/docker-compose.override.dev.yml
@@ -31,4 +31,4 @@ services:
   node:
     volumes:
       - ${DOCKER_VOLUME_ROOT_DIR}:/var/www/html
-      - node_modules:/var/www/html
+      - node_modules:/var/www/html/node_modules
