--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -94,3 +94,13 @@ services:
     tty: true
     networks:
       - backend
+
+  node:
+    image: ${COMPOSE_PROJECT_NAME}_node:latest
+    build:
+      context: ${DOCKER_BUILD_CONTEXT_DIR}
+      dockerfile: docker/node/node.Dockerfile
+      args:
+        - HTTP_PROXY=${HTTP_PROXY}
+        - HTTPS_PROXY=${HTTPS_PROXY}
+        - NO_PROXY=${NO_PROXY}
