Updated docker scripts

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -1,3 +1,7 @@
+#############################################################
+# Docker Compose Common Settings
+#############################################################
+
 # Necessary for Windows
 COMPOSE_CONVERT_WINDOWS_PATHS=1
 
@@ -9,6 +13,18 @@ COMPOSE_PATH_SEPARATOR=:
 
 # Define the prefix of container names.
 COMPOSE_PROJECT_NAME=myapp
+
+# All volumes driver
+VOLUMES_DRIVER=local
+
+# All Networks driver
+NETWORKS_DRIVER=bridge
+
+# Enter your Docker Host IP (will be appended to /etc/hosts). Default is `10.0.75.1`
+DOCKER_HOST_IP=10.0.75.1
+
+# Timezone
+TIMEZONE=UTC
 
 # Proxy
 HTTP_PROXY=http://1.2.3.4:5000/
@@ -24,24 +40,28 @@ DOCKER_BUILD_CONTEXT_DIR=../
 # Docker Volume Root Dir
 DOCKER_VOLUME_ROOT_DIR=../codes/
 
-# Timezone
-TIMEZONE=UTC
+#############################################################
+# Services Settings
+#############################################################
 
-# Publish Ports
-WEB_HTTP_PUBLISH_PORT=80
-WEB_HTTPS_PUBLISH_PORT=443
+# Adminer Service
 ADMINER_PUBLISH_PORT=8080
-REDIS_PUBLISH_PORT=6379
-ECHO_SERVER_PUBLISH_PORT=6001
 
-# All volumes driver
-VOLUMES_DRIVER=local
+# Web Service
+WEB_PUBLISH_HTTP_PORT=80
+WEB_PUBLISH_HTTPS_PORT=443
 
-# All Networks driver
-NETWORKS_DRIVER=bridge
-
-# Enter your Docker Host IP (will be appended to /etc/hosts). Default is `10.0.75.1`
-DOCKER_HOST_IP=10.0.75.1
-
-# MYSQL Data Volume
+# DB Service
+DB_PUBLISH_PORT=3306
+DB_DATABASE=skillmetrics
+DB_USERNAME=db_user
+DB_PASSWORD=password
+DB_ROOT_PASSWORD=root@2000
 DB_DATA_VOLUME=mysql
+DB_TIMEZONE=UTC
+
+# Redis Service
+REDIS_PUBLISH_PORT=6379
+
+# Echo Server Service
+ECHO_SERVER_PUBLISH_PORT=6001
