--- a/docker/docker-compose.override.dev.yml
+++ b/docker/docker-compose.override.dev.yml
@@ -15,13 +15,23 @@ services:
     volumes:
       - ${DOCKER_VOLUME_ROOT_DIR}:/var/www/html
 
+  db:
+    volumes:
+      - ${DB_DATA_VOLUME}:/var/lib/mysql
+
   adminer:
+    ports:
+      - "${ADMINER_PUBLISH_PORT}:8080"
     volumes:
       - adminer:/sessions
 
   redis:
     ports:
       - "${REDIS_PUBLISH_PORT}:6379"
+
+  echo-server:
+    ports:
+      - "${ECHO_SERVER_PUBLISH_PORT}:6001"
 
   queue:
     volumes:
