--- a/docker/docker-compose.override.prod.yml
+++ b/docker/docker-compose.override.prod.yml
@@ -6,3 +6,7 @@ services:
     ports:
       - ${WEB_HTTP_PUBLISH_PORT}:80
       - ${WEB_HTTPS_PUBLISH_PORT}:443
+
+  echo-server:
+    ports:
+      - "${ECHO_SERVER_PUBLISH_PORT}:6001"
