Updated Docker, Laravel 7

--- a/docker/.commons/php.ini
+++ b/docker/.commons/php.ini
@@ -3,18 +3,18 @@
 ; See the PHP docs for more configuration information.
 ; http://php.net/configuration.file
 
+expose_php=Off
+error_reporting=E_ALL
+log_errors=On
+
 output_buffering=${PHP_INI_OUTPUT_BUFFERING}
-zlib.output_compression=${PHP_INI_ZLIB_OUTPUT_COMPRESSION}
-expose_php=${PHP_INI_EXPOSE_PHP}
 max_execution_time=${PHP_INI_MAX_EXECUTION_TIME}
 max_input_time=${PHP_INI_MAX_INPUT_TIME}
 memory_limit=${PHP_INI_MEMORY_LIMIT}
-error_reporting=${PHP_INI_ERROR_REPORTING}
 display_errors=${PHP_INI_DISPLAY_ERRORS}
 display_startup_errors=${PHP_INI_DISPLAY_STARTUP_ERRORS}
-error_log=${PHP_INI_ERROR_LOG}
-log_errors=${PHP_INI_LOG_ERRORS}
-log_errors_max_len=${PHP_INI_LOG_ERRORS_MAX_LEN}
+;error_log=/proc/1/fd/2
+;log_errors_max_len=${PHP_INI_LOG_ERRORS_MAX_LEN}
 post_max_size=${PHP_INI_POST_MAX_SIZE}
 file_uploads=${PHP_INI_FILE_UPLOADS}
 upload_max_filesize=${PHP_INI_UPLOAD_MAX_FILESIZE}
@@ -41,7 +41,6 @@ session.upload_progress.name=${PHP_INI_SESSION_UPLOAD_PROGRESS_NAME}
 
 [opcache]
 opcache.enable=${PHP_INI_OPCACHE_ENABLE}
-opcache.enable_cli=${PHP_INI_OPCACHE_ENABLE_CLI}
 opcache.memory_consumption=${PHP_INI_OPCACHE_MEMORY_CONSUMPTION}
 opcache.interned_strings_buffer=${PHP_INI_OPCACHE_INTERNED_STRINGS_BUFFER}
 opcache.max_accelerated_files=${PHP_INI_OPCACHE_MAX_ACCELERATED_FILES}
