--- a/codes/.env.example
+++ b/codes/.env.example
@@ -10,7 +10,7 @@ APP_URL="https://${APP_SERVER_NAME}:${APP_SERVER_PORT}"
 APP_PUBLIC_PATH=/public
 APP_TIMEZONE=UTC
 
-LOG_CHANNEL=stack
+LOG_CHANNEL=stack-dev
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
@@ -35,13 +35,18 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_CACHE_DB=1
+REDIS_QUEUE=default
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_PORT=587
+MAIL_ENCRYPTION=null
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_TIMEOUT=null
+MAIL_LOG_CHANNEL=mail-log
+MAIL_FROM_ADDRESS=hello@example.com
+MAIL_FROM_NAME=Example
 
 FIREBASE_API_ACCESS_KEY=
 FIREBASE_SSL_VERIFY=false
