--- a/codes/composer.json
+++ b/codes/composer.json
@@ -12,27 +12,33 @@
             "role": "Developer"
         }
     ],
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "https://github.com/consilience/laravel-extended-logging.git"
+        }
+    ],
     "require": {
-        "php": "^7.1.3",
-        "box/spout": "^2.7",
-        "fideloper/proxy": "^4.0",
-        "guzzlehttp/guzzle": "^6.3.0",
-        "jtant/laravel-env-sync": "^2.0.0",
-        "laravel/framework": "^5.8.0",
-        "laravel/tinker": "^1.0",
-        "predis/predis": "^1.1",
-        "smartins/passport-multiauth": "^4.1",
-        "spatie/laravel-backup": "^6.3",
-        "spatie/laravel-permission": "^2.15"
+        "php": "^7.2.5",
+        "fideloper/proxy": "^4.2",
+        "fruitcake/laravel-cors": "^1.0",
+        "guzzlehttp/guzzle": "^6.3",
+        "laravel/framework": "^7.0",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0.1",
+        "box/spout": "^3.1",
+        "smartins/passport-multiauth": "^6.1",
+        "spatie/laravel-backup": "^6.8",
+        "spatie/laravel-permission": "^3.11"
     },
     "require-dev": {
-        "barryvdh/laravel-debugbar": "^3.1",
-        "beyondcode/laravel-dump-server": "^1.0",
-        "filp/whoops": "^2.0",
-        "fzaninotto/faker": "^1.4",
-        "mockery/mockery": "^1.0",
-        "nunomaduro/collision": "^3.0",
-        "phpunit/phpunit": "^8.0"
+        "facade/ignition": "^2.0",
+        "fzaninotto/faker": "^1.9",
+        "mockery/mockery": "^1.3.1",
+        "nunomaduro/collision": "^4.1",
+        "phpunit/phpunit": "^8.5",
+        "barryvdh/laravel-debugbar": "^3.2",
+        "beyondcode/laravel-dump-server": "^1.0"
     },
     "autoload": {
         "classmap": [
@@ -50,8 +56,7 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": [
-            ]
+            "dont-discover": []
         }
     },
     "scripts": {
@@ -67,9 +72,9 @@
         ]
     },
     "config": {
+        "optimize-autoloader": true,
         "preferred-install": "dist",
-        "sort-packages": true,
-        "optimize-autoloader": true
+        "sort-packages": true
     },
     "minimum-stability": "dev",
     "prefer-stable": true
