--- a/codes/package.json
+++ b/codes/package.json
@@ -10,25 +10,26 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "dependencies" : {
-        "laravel-echo-server" : "1.4.1"
+        "laravel-echo-server" : "^1.6.0"
     },
     "devDependencies": {
         "axios": "^0.19",
-        "bootstrap": "^4.3.0",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "flatpickr": "^4.5.2",
-        "laravel-echo": "^1.5.4",
-        "laravel-mix": "^4.0.7",
+        "cross-env": "^7.0",
+        "laravel-mix": "^5.0.1",
         "lodash": "^4.17.13",
-        "popper.js": "^1.12",
-        "resolve-url-loader": "^2.3.1",
+        "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
-        "select2": "^4.0.5",
+        "sass-loader": "^8.0.0",
+        "bootstrap": "^4.4.1",
+        "jquery": "^3.4.1",
+        "flatpickr": "^4.6.3",
+        "laravel-echo": "^1.6.0",
+        "popper.js": "^1.16",
+        "select2": "^4.0.13",
         "select2-bootstrap4-theme": "^1.0.0",
-        "socket.io-client": "^2.1.1",
-        "startbootstrap-sb-admin": "^5.0.2",
-        "vue": "^2.5.7"
+        "socket.io-client": "^2.3",
+        "startbootstrap-sb-admin": "^5.1.1",
+        "vue": "^2.6.11",
+        "vue-template-compiler": "^2.6.11"
     }
 }
