--- a/docker/.env.example
+++ b/docker/.env.example
@@ -6,13 +6,13 @@
 COMPOSE_CONVERT_WINDOWS_PATHS=1
 
 # Select which docker-compose files to include. Append more with `:docker-compose.prod.yml` at the end
-COMPOSE_FILE=docker-compose.yml:docker-compose.override.yml
+COMPOSE_FILE=docker-compose.yml:docker-compose.override.prod.yml:docker-compose.override.dev.yml
 
 # Change the separator from : to ; on Windows
 COMPOSE_PATH_SEPARATOR=:
 
 # Define the prefix of container names.
-COMPOSE_PROJECT_NAME=myapp
+COMPOSE_PROJECT_NAME=lvbase
 
 # All volumes driver
 VOLUMES_DRIVER=local
@@ -27,9 +27,9 @@ DOCKER_HOST_IP=10.0.75.1
 TIMEZONE=UTC
 
 # Proxy
-HTTP_PROXY=http://1.2.3.4:5000/
-HTTPS_PROXY=https://1.2.3.4:5000/
-NO_PROXY=localhost,127.0.0.*
+APP_HTTP_PROXY=http://1.2.3.4:5000/
+APP_HTTPS_PROXY=https://1.2.3.4:5000/
+APP_NO_PROXY=localhost,127.0.0.*
 
 # Build Mode ['dev', 'prod']
 DOCKER_BUILD_MODE=prod
@@ -48,17 +48,12 @@ DOCKER_VOLUME_ROOT_DIR=../codes/
 ADMINER_PUBLISH_PORT=8080
 
 # Web Service
-WEB_PUBLISH_HTTP_PORT=80
-WEB_PUBLISH_HTTPS_PORT=443
+WEB_HTTP_PUBLISH_PORT=80
+WEB_HTTPS_PUBLISH_PORT=443
 
 # DB Service
 DB_PUBLISH_PORT=3306
-DB_DATABASE=skillmetrics
-DB_USERNAME=db_user
-DB_PASSWORD=password
-DB_ROOT_PASSWORD=root@2000
 DB_DATA_VOLUME=mysql
-DB_TIMEZONE=UTC
 
 # Redis Service
 REDIS_PUBLISH_PORT=6379
