--- a/docker/.envs/app.example.env
+++ b/docker/.envs/app.example.env
@@ -1,5 +1,6 @@
 DEBUGBAR_ENABLED=false
-APP_NAME='App Name'
+
+APP_NAME='Laravel Base App'
 APP_ENV=production
 APP_KEY=
 APP_DEBUG=false
@@ -8,32 +9,44 @@ APP_SERVER_PORT=443
 APP_URL=https://localhost/
 APP_PUBLIC_PATH=/public
 APP_TIMEZONE=UTC
-LOG_CHANNEL=stack
+
+LOG_CHANNEL=errorlog
+
 DB_CONNECTION=mysql
 DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=db_name
-DB_USERNAME=db_user
-DB_PASSWORD=db_password
+DB_DATABASE=lv_base_app
+DB_USERNAME=lv_user
+DB_PASSWORD=lv_password
 DB_TIMEZONE=+00:00
 DB_USE_DEFAULT_STRING_LENGTH=false
-BROADCAST_DRIVER=log
-CACHE_DRIVER=file
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+
+BROADCAST_DRIVER=redis
+CACHE_DRIVER=redis
+QUEUE_CONNECTION=redis
+SESSION_DRIVER=redis
 SESSION_LIFETIME=120
+
 ECHO_API_APP_ID=
 ECHO_API_KEY=
+
 REDIS_HOST=redis
-REDIS_PASSWORD=null
+REDIS_PASSWORD=redispassword
 REDIS_PORT=6379
 REDIS_DB=0
 REDIS_CACHE_DB=1
+REDIS_QUEUE=default
+
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
+MAIL_PORT=587
+MAIL_ENCRYPTION=tls
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_TIMEOUT=null
+MAIL_LOG_CHANNEL=mail-log
+MAIL_FROM_ADDRESS=hello@example.com
+MAIL_FROM_NAME=Example
+
 FIREBASE_API_ACCESS_KEY=
 FIREBASE_SSL_VERIFY=false
