--- a/docker/db/db.env.example
+++ b/docker/db/db.env.example
@@ -1,5 +1,5 @@
-MYSQL_DATABASE=db_name
-MYSQL_USER=db_user
-MYSQL_PASSWORD=db_pass
+MYSQL_DATABASE=lv_base_app
+MYSQL_USER=lv_user
+MYSQL_PASSWORD=lv_pass
 MYSQL_ROOT_PASSWORD=secret
 TZ=UTC
