--- a/docker/web/vhost-ssl.example.conf
+++ b/docker/web/vhost-ssl.example.conf
@@ -1,35 +1,26 @@
 server {
     listen 80;
 
-    server_name _;
+    #server_name localhost;
     return 301 https://$host$request_uri;
 }
 
 server {
-    listen 443 default_server ssl http2;
+    listen 443 ssl http2;
 
-    server_name _;
+    #server_name localhost;
     root /var/www/html/public;
     index index.php index.html index.htm;
-    client_max_body_size 256m;
 
-    location = /favicon.ico {
-        log_not_found off;
-        access_log off;
-    }
-
-    location = /robots.txt  {
-        log_not_found off;
-        access_log off;
-    }
+    client_max_body_size 20m;
 
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
     location ~ \.php$ {
-        #fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass unix:/var/run/php/php-fpm.sock;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass app:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -40,20 +31,25 @@ server {
         deny all;
     }
 
-    error_page 404 /index.php;
+    server_tokens off;
 
-    ssl_certificate /etc/ssl/certs/default.crt;
-    ssl_certificate_key /etc/ssl/certs/default.key;
+    ssl_certificate /etc/ssl/certs/fullchain.crt;
+    ssl_certificate_key /etc/ssl/certs/privkey.key;
     #ssl_dhparam /etc/ssl/certs/dhparam-2048.pem;
-    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
     ssl_ciphers ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS;
     ssl_prefer_server_ciphers on;
     ssl_ecdh_curve secp384r1;
     ssl_session_tickets off;
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 24h;
-    ssl_stapling off;
-    ssl_stapling_verify off;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+
+    keepalive_timeout 300;
+
+    # Define the specified charset to the “Content-Type” response header field
+    charset utf-8;
 
     #add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     add_header X-Frame-Options DENY;
