Web Envs, Echo ProxyPassed

--- a/docker/.envs/app.example.env
+++ b/docker/.envs/app.example.env
@@ -36,6 +36,7 @@ REDIS_PORT=6379
 REDIS_DB=0
 REDIS_CACHE_DB=1
 REDIS_QUEUE=default
+REDIS_PREFIX=app_
 
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
