--- a/docker/.envs/web.example.env
+++ b/docker/.envs/web.example.env
@@ -1,1 +1,3 @@
-NGINX_VERSION=1.17.9
+VHOST_DNS_RESOLVER_IP=127.0.0.11
+VHOST_UPSTREAM_APP_SERVICE_HOST_PORT=app:9000
+VHOST_UPSTREAM_ECHO_SERVICE_HOST_PORT=echo:6001
