--- a/docker/web/nginx.conf
+++ b/docker/web/nginx.conf
@@ -28,7 +28,8 @@ http {
     log_not_found off;
     log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
                       '$status $body_bytes_sent "$http_referer" '
-                      '"$http_user_agent" "$http_x_forwarded_for"';
+                      '"$http_user_agent" "$http_x_forwarded_for"'
+                      '"$request_body"';
 
     gzip on;
     gzip_vary on;
@@ -36,10 +37,6 @@ http {
     gzip_comp_level 6;
     gzip_types text/plain text/css text/xml application/json application/javascript application/xml+rss application/atom+xml image/svg+xml;
     gzip_disable "msie6";
-
-    #brotli on;
-    #brotli_comp_level 6;
-    #brotli_types text/xml image/svg+xml application/x-font-ttf image/vnd.microsoft.icon application/x-font-opentype application/json font/eot application/vnd.ms-fontobject application/javascript font/otf application/xml application/xhtml+xml text/javascript  application/x-javascript text/plain application/x-font-truetype application/xml+rss image/x-icon font/opentype text/css image/x-win-bitmap;
 
     include /etc/nginx/conf.d/*.conf;
 }
