--- a/docker/web/vhost.example.conf
+++ b/docker/web/vhost.example.conf
@@ -12,11 +12,28 @@ server {
     }
 
     location ~ \.php$ {
+        resolver ${NGINX_VHOST_DNS_RESOLVER_IP} valid=10s;
+        set $upstreamName ${NGINX_VHOST_UPSTREAM_APP_SERVICE_HOST_PORT};
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass app:9000;
+        fastcgi_pass $upstreamName;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    location ~ ^/echo/(.*)$ {
+        resolver ${NGINX_VHOST_DNS_RESOLVER_IP} valid=10s;
+        set $upstreamName ${NGINX_VHOST_UPSTREAM_ECHO_SERVICE_HOST_PORT};
+        rewrite /echo/(.*) /$1 break;
+        proxy_pass http://$upstreamName/$1$is_args$args;
+        proxy_pass_request_headers on;
+        proxy_http_version 1.1;
+        proxy_set_header Host               $host;
+        proxy_set_header X-Real-IP          $remote_addr;
+        proxy_set_header X-Forwarded-For    $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto  $scheme;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
     }
 }
