Fix some missing docker envs

--- a/docker/.env.example
+++ b/docker/.env.example
@@ -34,11 +34,14 @@ APP_NO_PROXY=localhost,127.0.0.*
 # Build Mode ['dev', 'prod']
 DOCKER_BUILD_MODE=prod
 
-# Docker Build Context Dir
+# Docker Build Context Dir (end by slash)
 DOCKER_BUILD_CONTEXT_DIR=../
 
-# Docker Volume Root Dir
-DOCKER_VOLUME_ROOT_DIR=../codes/
+# Docker Volume Root Dir (end by slash)
+DOCKER_VOLUME_ROOT_DIR=../
+
+# Docker Volume Codes Root Dir (end by slash)
+DOCKER_VOLUME_CODES_ROOT_DIR=../codes/
 
 #############################################################
 # Services Settings
