Added mew auditing package

--- a/docker/.envs/app.example.env
+++ b/docker/.envs/app.example.env
@@ -10,6 +10,8 @@ APP_URL=https://localhost/
 APP_PUBLIC_PATH=/public
 APP_TIMEZONE=UTC
 
+AUDITING_ENABLED=true
+
 LOG_CHANNEL=errorlog
 
 DB_CONNECTION=mysql
