--- a/codes/composer.json
+++ b/codes/composer.json
@@ -20,13 +20,14 @@
     ],
     "require": {
         "php": "^7.2.5",
+        "box/spout": "^3.1",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0.1",
-        "box/spout": "^3.1",
+        "owen-it/laravel-auditing": "^10.0",
         "smartins/passport-multiauth": "^6.1",
         "spatie/laravel-backup": "^6.8",
         "spatie/laravel-permission": "^3.11"
