Added Minio Support

--- a/codes/.env.example
+++ b/codes/.env.example
@@ -56,6 +56,12 @@ AWS_SECRET_ACCESS_KEY=
 AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 
+MINIO_ACCESS_KEY=
+MINIO_SECRET_KEY=
+MINIO_REGION=
+MINIO_BUCKET=
+MINIO_ENDPOINT=
+
 PUSHER_APP_ID=
 PUSHER_APP_KEY=
 PUSHER_APP_SECRET=
