--- a/docker/.envs/app.example.env
+++ b/docker/.envs/app.example.env
@@ -53,3 +53,9 @@ MAIL_FROM_NAME=Example
 
 FIREBASE_API_ACCESS_KEY=
 FIREBASE_SSL_VERIFY=false
+
+MINIO_ACCESS_KEY=access-key
+MINIO_SECRET_KEY=secret-key
+MINIO_REGION=
+MINIO_BUCKET=
+MINIO_ENDPOINT=http://minio:9000
