--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -87,3 +87,10 @@ services:
     restart: always
     networks:
       - default
+
+  minio:
+    image: minio/minio:RELEASE.2020-04-10T03-34-42Z
+    command: ["minio", "server", "/export"]
+    restart: always
+    networks:
+      - default
